@@ -10,7 +10,7 @@ dist_check_SCRIPTS = check-run1 check-run2 check-run3 check-psk-crack-1 check-ps
 dist_man_MANS = ike-scan.1 psk-crack.1
 ike_scan_SOURCES = ike-scan.c ike-scan.h error.c isakmp.c isakmp.h wrappers.c utils.c mt19937ar.c
 ike_scan_LDADD = $(LIBOBJS)
-psk_crack_SOURCES = psk-crack.c ike-scan.h error.c wrappers.c utils.c mt19937ar.c
+psk_crack_SOURCES = psk-crack.c psk-crack.h error.c wrappers.c utils.c mt19937ar.c
 psk_crack_LDADD = $(LIBOBJS)
 check_sizes_SOURCES = check-sizes.c error.c ike-scan.h
 check_hash_SOURCES = check-hash.c error.c utils.c wrappers.c ike-scan.h mt19937ar.c
