@@ -186,7 +186,6 @@ unsigned char *SHA1(const unsigned char *, size_t, unsigned char *);
 #define SYSLOG_FACILITY LOG_USER	/* Syslog facility to use */
 #define PATTERNS_FILE "ike-backoff-patterns" /* Backoff patterns filename */
 #define VID_FILE "ike-vendor-ids"	/* Vendor ID patterns filename */
-#define DICT_FILE "psk-crack-dictionary" /* psk-crack dictionary filename */
 #define REALLOC_COUNT	1000		/* Entries to realloc at once */
 #define DEFAULT_TCP_CONNECT_TIMEOUT 10	/* TCP connect timeout in seconds */
 #define TCP_PROTO_RAW 1			/* Raw IKE over TCP (Checkpoint) */
@@ -331,7 +330,6 @@ void warn_msg(const char *, ...);
 void info_syslog(const char *, ...);
 void err_print(int, int, const char *, va_list);
 void usage(int, int);
-void psk_crack_usage(int);
 void add_host_pattern(const char *, unsigned, unsigned *, unsigned char *,
                       size_t);
 void add_host(const char *, unsigned, unsigned *, unsigned char *,
